k8s-manifests/app/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: exam-platform
spec:
  replicas: 1
  selector:
    matchLabels: {app: frontend}
  template:
    metadata:
      labels: {app: frontend}
    spec:
      containers:
      - name: frontend
        image: bayarmaa/frontend:latest
        ports:
        - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: exam-platform
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 6000
